# spending-predictor

./: .gitignore  CHANGELOG.md  pyproject.toml  requirements.txt
src/: drift.py  features.py  ingest.py  main.py  predict.py  report.py  train.py
tests/: conftest.py  test_features.py  test_ingest.py  test_integration.py  test_predict.py  test_report.py  test_train.py
